Nonfound error handling, user handler methods, setting favorite pokemon
