# src/app.ts
@@ -1,24 +1,16 @@
-import { MikroORM, RequestContext } from '@mikro-orm/core';
+import { RequestContext } from '@mikro-orm/core';
 import { fastify } from 'fastify';
 import swagger from "@fastify/swagger";
 import swaggerUI from "@fastify/swagger-ui";
 import openapiGlue from "fastify-openapi-glue";
-import { NotFoundError } from "@mikro-orm/core";
 import { initORM } from './db.js';
-import { User } from './modules/user/user.entity.js';
-// import { Service } from './serviceHandlers.js';
 import serviceHandlers from './serviceHandlers.js';
+import securityHandler from './modules/authentication/security.handler.js';
 
-import { Security } from "./security.js";
+
 
 export async function bootstrap(port = 3000) {
-  const ormOptions = {
-    findOneOrFailHandler: (entityName: string, where: Dictionary | IPrimaryKey) => {
-      const error = new NotFoundError(`${entityName} not fousssnd!`);
-      // error["statusCode"] = 404;
-      return error;
-    },
-  }
+  
   const db = await initORM();
   const app = fastify({
     logger: {
@@ -31,8 +23,8 @@ export async function bootstrap(port = 3000) {
 
   const oaGlueOptions = {
     specification: `${process.cwd()}/src/openapi/api-spec.yaml`,
-    serviceHandlers: serviceHandlers,//new Service(),
-    securityHandlers: new Security(),
+    serviceHandlers: serviceHandlers,
+    securityHandlers: securityHandler,
   };
 
   app.register(openapiGlue, oaGlueOptions);
@@ -74,6 +66,29 @@ export async function bootstrap(port = 3000) {
     await db.orm.close();
   });
 
+  // app.setNotFoundHandler({
+  //   preValidation: (req, reply, done) => {
+  //     console.log("PREVALIDATION")
+  //     done()
+  //   },
+  //   preHandler: (req, reply, done) => {
+  //     console.log("PREHANDLER")
+  //     done()
+  //   }
+  // }, function (request, reply) {
+  //     // Default not found handler with preValidation and preHandler hooks
+  //     console.log(request);
+  // });
+
+  // app.setErrorHandler(function (error, request, reply) {
+  //   if (Object.hasOwn(error, "type") && error.type === "NotFoundError") {
+  //     error.statusCode = 404;
+  //   }
+  //   // Log error
+  //   // this.log.error(error)
+  //   // Send error response
+  //   reply.status(409).send({ ok: false })
+  // })
   // app.get('/pokemons', async request => {
   //   const { limit, offset } = request.query as { limit?: number; offset?: number };
   //   const [items, total] = await db.pokemon.findAndCount({}, { limit, offset });
