# src/serviceHandlers.ts
@@ -1,5 +1,6 @@
-import { createUser, getUser, getUsers, updateUser } from "./modules/user/user.controller.js";
+import { createUser, getUser, getUsers, updateUser, deleteUser, getFavoritePokemons, setFavoritePokemon, removeFavoritePokemon } from "./modules/user/user.controller.js";
 import { authenticate } from "./modules/authentication/authentication.controller.js";
+import { createPokemon, getPokemon, getPokemons } from "./modules/pokemon/pokemon.controller.js";
 
 export default {
   authenticate,
@@ -7,5 +8,11 @@ export default {
   getUser,
   getUsers,
   updateUser,
-
+  deleteUser,
+  createPokemon,
+  getPokemon,
+  getPokemons,
+  getFavoritePokemons,
+  setFavoritePokemon,
+  removeFavoritePokemon
 };
